[package]
name = "coco"
version = "0.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
description = "Concurrent collections"
repository = "https://github.com/stjepang/coco"
documentation = "https://docs.rs/coco"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]
scopeguard = "0.3"

[dev-dependencies]
rand = "0.3"
