[package]
name = "coco"
version = "0.3.4"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
description = "Concurrent collections"
repository = "https://github.com/stjepang/coco"
documentation = "https://docs.rs/coco"
readme = "README.md"
license = "Apache-2.0/MIT"

[badges]
maintenance = { status = "deprecated" }

[dependencies]
either = "1.0"
scopeguard = "0.3"

[dev-dependencies]
rand = "0.3"

[features]
strict_gc = []
internals = []
